# esl_mod

./: CMakeLists.txt  README.md
codemp/: README.md
codemp/cgame/: cg_consolecmds.c  cg_cvar.c  cg_draw.c  cg_main.c  cg_view.c  cg_weapons.c  cg_xcvar.h
codemp/game/: bg_public.h  g_cmds.c  g_combat.c  g_local.h  g_log.c
codemp/qcommon/: q_shared.c  q_shared.h
